kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: "http01-clusterissuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "kravchenko-mikhail-21.k8s.praktikum-services.tech"
  rules:
    - host: "kravchenko-mikhail-21.k8s.praktikum-services.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
